Added News Screen, Styled News, Added Cancel Button

--- a/www/partials/new/newstudent.html
+++ b/www/partials/new/newstudent.html
@@ -1,13 +1,21 @@
 <ion-content>
 	<div id="saveContainer">
+		<h2 class="hidden">Save Container</h2>
 		<a class="underline" href="#/tutorials"><input type="button" id="saveBut" value="Save"></a>
 	</div>
+
+	<div id="cancelContainer">
+		<h2 class="hidden">Cancel Container</h2>
+		<a class="underline" href="#/greeting"><input type="button" id="cancelBut" value="Cancel"></a>
+	</div>
+
 
 	<div id="createProfile">
 		<h2>Create Your Profile</h2>
 	</div>
 
 	<form id="fillOutProfile">
+		<h2 class="hidden">Profile Form</h2>
 		<label class="profileLabel" for="image">Profile Image :</label>
 		<br>
 		<input class="profileInputFile" type="file" name="img">
