--- a/www/css/style.css
+++ b/www/css/style.css
@@ -132,7 +132,12 @@
   position: relative;
   left: 275px; }
 
-#saveBut {
+#cancelContainer {
+  position: relative;
+  bottom: 73px;
+  left: 15px; }
+
+#saveBut, #cancelBut {
   border: none;
   background: rgba(0, 0, 0, 0.5);
   box-shadow: 0px 2px 4px 0px rgba(0, 0, 0, 0.5);
@@ -378,6 +383,41 @@
 .courseList .bgColorCourse {
   margin-bottom: 10px; }
 
+/*--- News ---*/
+#newsList {
+  background: rgba(255, 255, 255, 0.5);
+  padding-top: 25px;
+  padding-bottom: 25px;
+  padding-left: 20px;
+  padding-right: 20px;
+  position: relative;
+  bottom: 28px;
+  margin-bottom: 20px; }
+
+#newsList h2 {
+  font-family: "PT Sans", sans-serif;
+  font-weight: 700;
+  font-size: 1.4em;
+  padding-bottom: 8px; }
+
+#newsList h5 {
+  font-family: "PT Sans", sans-serif;
+  font-weight: 400;
+  font-size: 0.875em;
+  padding-bottom: 8px; }
+
+#newsList .newsBody, #newsList .newsBody2, #newsList .newsBody3, #newsList .newsBody4 {
+  font-family: "PT Sans", sans-serif;
+  font-weight: 400; }
+
+#newsList .newsBody {
+  padding-bottom: 8px; }
+
+#newsList span {
+  font-family: "PT Sans", sans-serif;
+  font-weight: 400;
+  color: #007795; }
+
 /*--- Course Home ---*/
 .courseMenu {
   margin-top: 30px; }
@@ -590,7 +630,8 @@
 .calendarHeader {
   width: 95%;
   position: relative;
-  left: 10px; }
+  left: 10px;
+  bottom: 10px; }
 
 md-toolbar.md-default-theme:not(.md-menu-toolbar), md-toolbar:not(.md-menu-toolbar) {
   background-color: #4A4A4A; }
