Profile Headings Added & Moved a few things on Profile

--- a/www/partials/new/newstudent.html
+++ b/www/partials/new/newstudent.html
@@ -1,15 +1,4 @@
 <ion-content>
-	<div id="saveContainer">
-		<h2 class="hidden">Save Container</h2>
-		<a class="underline" href="#/tutorials"><input type="button" id="saveBut" value="Save"></a>
-	</div>
-
-	<div id="cancelContainer">
-		<h2 class="hidden">Cancel Container</h2>
-		<a class="underline" href="#/greeting"><input type="button" id="cancelBut" value="Cancel"></a>
-	</div>
-
-
 	<div id="createProfile">
 		<h2>Create Your Profile</h2>
 	</div>
@@ -20,8 +9,7 @@
 		<br>
 		<input class="profileInputFile" type="file" name="img">
 		<br>
-		<label class="profileLabel" for="hometown">Hometown :</label>
-		<input class="profileInput" type="text">
+		<h4 class="profileSubHeadings">Social Media</h4>
 		<br>
 		<label class="profileLabel" for="facebook">Facebook :</label>
 		<input class="profileInput" type="text">
@@ -30,6 +18,11 @@
 		<input class="profileInput" type="text">
 		<br>
 		<label class="profileLabel" for="linkedin">LinkedIn :</label>
+		<input class="profileInput" type="text">
+		<br>
+		<h4 class="profileSubHeadings">Contact Information</h4>
+		<br>
+		<label class="profileLabel" for="hometown">Hometown :</label>
 		<input class="profileInput" type="text">
 		<br>
 		<label class="profileLabel" for="address">Address :</label>
@@ -43,6 +36,8 @@
 		<br>
 		<label class="profileLabel" for="province">Province :</label>
 		<input class="profileInput" type="text">
+		<br>
+		<h4 class="profileSubHeadings">Education & Work</h4>
 		<br>
 		<label class="profileLabel" for="highschool">High School :</label>
 		<input class="profileInput" type="text">
@@ -59,35 +54,47 @@
 		<label class="profileLabel" for="position">Position :</label>
 		<input class="profileInput" type="text">
 		<br>
+		<h4 class="profileSubHeadings">Personal Information</h4>
+		<br>
 		<label class="profileLabel" for="learnexperience">Learning Experience :</label>
-		<input class="profileInput" type="text">
+		<textarea class="profileText" rows="4" cols="50"></textarea>
 		<br>
 		<label class="profileLabel" for="website">Website :</label>
 		<input class="profileInput" type="text">
 		<br>
 		<label class="profileLabel" for="hobbies">Hobbies :</label>
-		<input class="profileInput" type="text">
+		<textarea class="profileText" rows="4" cols="50"></textarea>
 		<br>
 		<label class="profileLabel" for="books">Books :</label>
-		<input class="profileInput" type="text">
+		<textarea class="profileText" rows="4" cols="50"></textarea>
 		<br>
 		<label class="profileLabel" for="music">Music :</label>
-		<input class="profileInput" type="text">
+		<textarea class="profileText" rows="4" cols="50"></textarea>
 		<br>
 		<label class="profileLabel" for="tvshows">Tv Shows :</label>
-		<input class="profileInput" type="text">
+		<textarea class="profileText" rows="4" cols="50"></textarea>
 		<br>
 		<label class="profileLabel" for="movies">Movies :</label>
-		<input class="profileInput" type="text">
+		<textarea class="profileText" rows="4" cols="50"></textarea>
 		<br>
 		<label class="profileLabel" for="tagline">Tagline :</label>
-		<input class="profileInput" type="text">
+		<textarea class="profileText" rows="4" cols="50"></textarea>
 		<br>
 		<label class="profileLabel" for="quotes">Quotes :</label>
-		<input class="profileInput" type="text">
+		<textarea class="profileText" rows="4" cols="50"></textarea>
 		<br>
 		<label class="profileLabel" for="goals">Goals :</label>
-		<input class="profileInput" type="text">
+		<textarea class="profileText" rows="4" cols="50"></textarea>
 	</form>
+
+	<div id="saveContainer">
+		<h2 class="hidden">Save Container</h2>
+		<a class="underline" href="#/tutorials"><input type="button" id="saveBut" value="Save"></a>
+	</div>
+
+	<div id="cancelContainer">
+		<h2 class="hidden">Cancel Container</h2>
+		<a class="underline" href="#/greeting"><input type="button" id="cancelBut" value="Cancel"></a>
+	</div>
 
 </ion-content>
