--- a/www/css/style.css
+++ b/www/css/style.css
@@ -63,6 +63,10 @@
   padding-right: 45px;
   letter-spacing: 0.5px; }
 
+/*Fixing the Issue of color being pink*/
+a.md-default-theme:not(.md-button), a:not(.md-button) {
+  color: #ffffff; }
+
 #login {
   font-family: "robotothin";
   background: rgba(0, 0, 0, 0.63);
@@ -169,6 +173,17 @@
   font-size: 1.5em;
   text-align: center; }
 
+.profileSubHeadings {
+  border-radius: 8px;
+  box-shadow: 0px 2px 4px 0px rgba(0, 0, 0, 0.5);
+  background: rgba(0, 0, 0, 0.69);
+  width: 90%;
+  padding-top: 15px;
+  padding-bottom: 15px;
+  text-align: center;
+  font-family: "robotoitalic";
+  color: #ffffff; }
+
 #fillOutProfile {
   margin-left: 20px; }
 
@@ -195,6 +210,20 @@
   font-family: "robotolight";
   padding-top: 8px;
   padding-bottom: 8px; }
+
+.profileText {
+  width: 94%;
+  border-radius: 8px;
+  font-family: "robotolight";
+  font-size: 1em;
+  margin-top: 10px;
+  padding-left: 15px;
+  padding-top: 8px;
+  padding-bottom: 8px;
+  -webkit-box-shadow: 0px 2px 4px 0px rgba(0, 0, 0, 0.5);
+  -moz-box-shadow: 0px 2px 4px 0px rgba(0, 0, 0, 0.5);
+  -o-box-shadow: 0px 2px 4px 0px rgba(0, 0, 0, 0.5);
+  box-shadow: 0px 2px 4px 0px rgba(0, 0, 0, 0.5); }
 
 /*Tutorials*/
 /*Returning Student*/
