--- a/www/partials/courses/courseshome.html
+++ b/www/partials/courses/courseshome.html
@@ -8,7 +8,10 @@
 </div>
 
 <!--Main Course Home Dropdowns Include-->
-<div class="menuCourse" ng-include="'partials/templates/coursedropdowns.html'"></div>
+<div class="menuCourse" ng-include="'partials/templates/coursedropdowns.html'">
+	<h2 class="hidden">Menu Course Dropdown Include</h2>
+</div>
+
 
 <div id="textbooklist">
 	<h2>Textbook List :</h2>
