--- a/www/partials/return/tutorials.html
+++ b/www/partials/return/tutorials.html
@@ -1,4 +1,8 @@
 <ion-content>
 <!--Main Header Include-->
-<div ng-include="'partials/templates/main-header.html'"></div>
+<div ng-include="'partials/templates/main-header.html'">
+	<h2 class="hidden">Main Header Template</h2>
+</div>
+
+<img class="tutorialImage" src="img/tutorial.png" alt="tutorial Image">
 </ion-content>
