--- a/www/partials/templates/coursedropdowns.html
+++ b/www/partials/templates/coursedropdowns.html
@@ -29,11 +29,11 @@
 		<h2 class="courseName">Classlist</h2><i class="icon ion-chevron-right linksMenuItem"></i>
 	</ion-item>
 
-	<ion-item class="item-icon-right bgColorCourseLinks" href="#">
+	<ion-item class="item-icon-right bgColorCourseLinks" href="#/content">
 		<h2 class="courseName">Content</h2><i class="icon ion-chevron-right linksMenuItem"></i>
 	</ion-item>
 
-	<ion-item class="item-icon-right bgColorCourseLinks" href="#">
+	<ion-item class="item-icon-right bgColorCourseLinks" href="#/discussion">
 		<h2 class="courseName">Discussion</h2><i class="icon ion-chevron-right linksMenuItem"></i>
 	</ion-item>
 
